--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="block">
-    gRPCis [Version 0.5.0] <br>
+    itisadb [Version 0.7.0] <br>
   </div><br>
   <div class="block">
     <label for="name">C:\GRPC\Call></label>
