--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -2,14 +2,14 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>gRPCis</title>
+  <title>itisadb</title>
   <link rel="stylesheet" href="/static/css/style.css">
 
 </head>
 <body>
 <div class="container">
   <div class="block">
-    itisadb [Version 0.8.0] <br>
+    itisadb [Version 0.9.0] <br>
   </div><br>
   <div class="block">
     <label for="name">C:\GRPC\Call></label>
@@ -17,7 +17,7 @@
   </div>
   <div class="message">
     Hello, friend!<br>
-    This is a web view for a single set\get to\from the distributed database called gRPCis.<br>
+    This is a web view for a single set\get to\from the distributed database called itisadb.<br>
     <br>
     How it works:
     Your request will be processed by a web service that will determine the appropriate gRPC method of the memory balancer.<br>
@@ -28,7 +28,7 @@
     Try it now! Type "help" for more information. <br>
     <br>
     Здравствуй, друг! <br>
-    Это веб-приложение для единичной вставки\получения значения распределенной базы данных под названием gRPCis.<br>
+    Это веб-приложение для единичной вставки\получения значения распределенной базы данных под названием itisadb.<br>
     <br>
     Как это работает:
     Ваш запрос будет обработан веб-службой, которая определит соответствующий gRPC-метод балансировщика памяти.<br>
