--- a/templates/html/auth.html
+++ b/templates/html/auth.html
@@ -10,7 +10,7 @@
 <body class="container">
   <div class="login-container">
     <div class="login-content">
-      <h1 class="welcome-text">Log In</h1>
+      <h1 class="welcome-text">ItisaDB</h1>
       <form class="login-form" method="post" action="/auth">
         <input type="text" placeholder="Username" name="login" class="input-field">
         <input type="password" placeholder="Password"  name="password" class="input-field">
@@ -19,7 +19,5 @@
     </div>
   </div>
 </body>
-<!-- partial -->
-  
 </body>
 </html>
