--- a/templates/html/auth.html
+++ b/templates/html/auth.html
@@ -12,7 +12,7 @@
     <div class="login-content">
       <h1 class="welcome-text">ItisaDB</h1>
       <form class="login-form" method="post" action="/auth">
-        <input type="text" placeholder="Username" name="login" class="input-field">
+        <input type="text" placeholder="Username" name="username" class="input-field">
         <input type="password" placeholder="Password"  name="password" class="input-field">
         <button type="submit" class="login-button">Login</button>
       </form>
