--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -6,6 +6,7 @@ body {
   align-items: center;
   height: 100vh;
   background-color: black;
+  font-family: "Helvetica Neue", sans-serif;
 }
 
 .login-container {
@@ -20,7 +21,6 @@ body {
 }
 
 .welcome-text {
-  font-family: "Helvetica Neue", sans-serif;
   font-size: 30px;
   color: #fff;
   margin-bottom: 20px;
@@ -53,7 +53,7 @@ body {
 }
 
 .login-button:hover {
-  background-color: #0066cc;
+  background-color: #f7f3f3;
   box-shadow: 15px;
   box-shadow: 0px 0px 10 rgba(0, 0, 0, 0.3);
 }
