--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,26 +1,45 @@
 body {
   margin: 0;
-  padding: 100px;
   background-color: #000;
   color: #fff;
   font-size: 14px;
-  font-family: "Breakfast Pastry, Serif";
+  font-family: "Helvetica Neue", sans-serif;
 }
 .container {
   max-width: 80%;
-  max-height: 100vh;
+  max-height: 50vh;
   margin: auto;
+  position:relative;
 }
+
+.version-text {
+  font-size: 11px;
+  color: #d9d9d9;
+  margin-top: -15px;
+  padding-bottom: 10px;
+}
+
 
 .textfield {
   background: #000;
   border: none;
   color: #fff;
   padding-left: 5px;
+  padding-bottom: 15px;
   width: 700px;
+  font-size: 24px;
+  /*text-align: center;*/
 }
 
 .textfield:focus {
   border: none;
   outline: none;
+  text-align: left;
 }
+
+.message {
+  padding-left: 5px;
+  text-align: left;
+  position:absolute;
+  margin-right: 15%;
+ }
