--- a/templates/html/index.html
+++ b/templates/html/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
   <div class="block">
-    itisadb [Version 0.9.0] <br>
+    itisadb [Version 0.10.0] <br>
   </div><br>
   <div class="block">
     <label for="name">C:\GRPC\Call></label>
@@ -19,11 +19,12 @@
     Hello, friend!<br>
     This is a web view for a single set\get to\from the distributed database called itisadb.<br>
     <br>
-    How it works:
-    Your request will be processed by a web service that will determine the appropriate gRPC method of the memory balancer.<br>
-    After that, the memory balancer will process your operation by saving\getting the necessary values from\to the storage(-s) and <br>
+    How it works:<br>
+    1. Your request will be processed by a web service that will determine the appropriate gRPC method of the memory balancer.<br>
+    2. After that, the memory balancer will process your operation by saving\getting the necessary values from\to the storage(-s) and <br>
     return you the value (or the error was not found) if it was a get operation or the server number (or the option number that <br>
     you specified) on which the value was saved if it was a set operation.<br>
+    3. You will be able to see the value if it was a get operation or the server number if it was a set operation.<br>
     <br>
     Try it now! Type "help" for more information. <br>
     <br>
