--- a/templates/html/auth.html
+++ b/templates/html/auth.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <title>Itisadb</title>
   <link rel="stylesheet" href="/static/css/auth.css">
-
+  <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
 <body class="container">
   <div class="login-container">
     <div class="login-content">
+      <h1 class="logo-text">𓆩✧𓆪</h1>
       <h1 class="welcome-text">ItisaDB</h1>
+      <h1 class="version-text">v0.10.0</h1>
       <form class="login-form" method="post" action="/auth">
         <input type="text" placeholder="Username" name="username" class="input-field">
         <input type="password" placeholder="Password"  name="password" class="input-field">
