--- a/templates/html/index-2.html
+++ b/templates/html/index-2.html
@@ -9,6 +9,7 @@
 <body class="container">
   <div class="login-container">
     <div class="login-content">
+      <h1 class="logo-text">𓆩✧𓆪</h1>
       <h1 class="welcome-text">ItisaDB</h1>
       <h1 class="version-text">v0.10.0</h1>
       <input type="text" name="name" id="name" autocomplete="off" class="textfield"  placeholder="Type your request">
