--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -26,12 +26,6 @@ body {
   margin-bottom: 20px;
 }
 
-.logo-text {
-  font-size: 22px;
-  color: #fff;
-  margin-bottom: -20px;
-}
-
 .input-field {
   display: block;
   width: auto;
@@ -58,8 +52,25 @@ body {
   transition: background-color 0.4s ease;
 }
 
+.demo-button {
+  font-size: 12px;
+  /*width: 100%;*/
+  max-width: 100px;
+  padding: 10px;
+  margin: 20px auto 10px;
+  border: none;
+  border-radius: 15px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.4s ease;
+  display: inline-block;
+  text-decoration: underline;
+}
+
 .login-button:hover {
-  background-color: #f7f3f3;
+  background-color: #afc1f4;
   box-shadow: 15px;
   box-shadow: 0px 0px 10 rgba(0, 0, 0, 0.3);
 }
