--- a/templates/html/auth.html
+++ b/templates/html/auth.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>Itisadb</title>
   <link rel="stylesheet" href="/static/css/auth.css">
-  <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/static/css/common.css">
 </head>
-<body>
 <body class="container">
   <div class="login-container">
     <div class="login-content">
+      <br>
       <h1 class="logo-text">𓆩✧𓆪</h1>
       <h1 class="welcome-text">ItisaDB</h1>
       <h1 class="version-text">v0.10.0</h1>
@@ -18,8 +18,27 @@
         <input type="password" placeholder="Password"  name="password" class="input-field">
         <button type="submit" class="login-button">Login</button>
       </form>
+
+<!--      <br>-->
+<!--      <p style="margin-bottom: -10px; color: #d9d9d9">Not a user? Use demo access.</p>-->
+      <div class="login-container">
+        <form class="login-form" method="post" action="/auth">
+          <input name="username" value="itisadb" type="hidden">
+          <input name="password" value="itisadb" hidden="hidden">
+          <a href="https://egorgasay.github.io/itisadb/" class="demo-button">Docs</a>
+          <button type="submit" class="demo-button">Demo</button>
+          <a href="https://github.com/egorgasay/itisadb" class="demo-button">GitHub</a>
+        </form>
+      </div>
+
+<!--      <br>-->
+<!--      <p style="margin-bottom: -10px; color: #d9d9d9">Searching for documentation?</p>-->
+<!--      <form class="login-form" method="get" action="/docs">-->
+<!--        <input name="username" value="itisadb" type="hidden">-->
+<!--        <input name="password" value="itisadb" hidden="hidden">-->
+<!--        <button type="submit" class="login-button">Docs</button>-->
+<!--      </form>-->
     </div>
   </div>
-</body>
 </body>
 </html>
