--- a/templates/html/index-2.html
+++ b/templates/html/index-2.html
@@ -5,6 +5,7 @@
   <title>Itisadb</title>
   <link rel="stylesheet" href="/static/css/auth.css">
   <link rel="stylesheet" href="/static/css/style.css">
+  <link rel="stylesheet" href="/static/css/common.css">
 </head>
 <body class="container">
   <div class="login-container">
@@ -13,12 +14,11 @@
       <h1 class="welcome-text">ItisaDB</h1>
       <h1 class="version-text">v0.10.0</h1>
       <input type="text" name="name" id="name" autocomplete="off" class="textfield"  placeholder="Type your request">
-<!--      <button type="submit" class="login-button">Send</button>-->
       <div class="message">
         Hello, friend!<br>
         This is a web view for a single set\get to\from the distributed database called itisadb.<br>
         <br>
-        - How it works:<br>
+        How it works:<br>
         <br>
         1. Your request will be processed by a web service that will determine the appropriate gRPC method of the memory balancer.<br>
         <br>
