--- a/templates/html/auth.html
+++ b/templates/html/auth.html
@@ -22,7 +22,7 @@
         <form class="login-form" method="post" action="/auth">
           <input name="username" value="itisadb" type="hidden">
           <input name="password" value="itisadb" hidden="hidden">
-          <a href="http://localhost:3000/" class="demo-button">Docs</a>
+          <a href="https://itisa-doc.egorgasay.repl.co/base-commands.html" class="demo-button">Docs</a>
           <button type="submit" class="demo-button">Demo</button>
           <a href="https://github.com/egorgasay/itisadb" class="demo-button">GitHub</a>
         </form>
