:sparkles: Integrated security service into logic and balancer layers. Added user creation and management commands in commands.go. Updated user handling in balancer and logic.go.

--- a/templates/html/auth.html
+++ b/templates/html/auth.html
@@ -12,7 +12,7 @@
       <br>
       <h1 class="logo-text">𓆩✧𓆪</h1>
       <h1 class="welcome-text">ItisaDB</h1>
-      <h1 class="version-text">v0.10.0</h1>
+      <h1 class="version-text">v0.11.0</h1>
       <form class="login-form" method="post" action="/auth">
         <input type="text" placeholder="Username" name="username" class="input-field">
         <input type="password" placeholder="Password"  name="password" class="input-field">
@@ -20,14 +20,13 @@
       </form>
       <div class="login-container">
         <form class="login-form" method="post" action="/auth">
-          <input name="username" value="itisadb" type="hidden">
-          <input name="password" value="itisadb" hidden="hidden">
+          <input name="username" value="demo" type="hidden">
+          <input name="password" value="demo" hidden="hidden">
           <a href="https://itisa-doc.egorgasay.repl.co/" class="demo-button">Docs</a>
           <button type="submit" class="demo-button">Demo</button>
           <a href="https://github.com/egorgasay/itisadb" class="demo-button">GitHub</a>
         </form>
       </div>
-
     </div>
   </div>
 </body>
